feat(protocol): Change UI according to new protocol interface

--- a/src/translation/lang/translations.eng.json
+++ b/src/translation/lang/translations.eng.json
@@ -41,11 +41,11 @@
     "market.label.youReceive": "You receive",
     "market.label.overview": "Overview",
     "market.label.swap": "Swap",
-    "market.label.liquidity": "Liquidity",
+    "market.label.liquidity": "Add liquidity",
     "market.label.claimEarnings": "Claim",
-    "market.label.seedPool": "Seed pool",
+    "market.label.seedPool": "Add liquidity",
     "market.label.marketClosed": "Market closed",
-    "market.label.exitPool": "Exit Pool",
+    "market.label.exitPool": "Remove liquidity",
     "market.label.notLoggedIn": "Not logged in",
 
     "market.claimEarnings.validMarket": "This market was resoluted and marked as valid. You can claim your earnings below",
@@ -103,11 +103,11 @@
 
     "seedPool.wrongUser.title": "Only the creator of the market can seed the pool",
     "seedPool.wrongUser.description": "Please come back later. If you are the creator, please login as :account to seed the pool.",
-    "seedPool.explanation": "Seed the pool with NEAR, pick how heavy each outcome is. Together it should be 100%",
+    "seedPool.explanation": "Seed the pool with :tokenName, pick how heavy each outcome is. Together it should be 100%",
     "seedPool.not100Percent": "All the weight combined equal :percentage but should equal 100",
     "seedPool.inputZero": "Outcome can't have a weight of zero or less",
     "seedPool.input100": "Outcome can't have a weight of 100 or higher",
-    "seedPool.action.submit": "Seed pool",
+    "seedPool.action.submit": "Add liquidity",
     "seedPool.action.finalize": "Publish pool",
     "seedPool.action.reSeed": "Reseed pool",
     "seedPool.weightsTitle": "Outcome weights",
@@ -130,7 +130,7 @@
 
     "exitPool.description": "Removing pool tokens converts your position back into underlying tokens at the current rate, proportional to your share of the pool. Accrued fees are included in the amounts you receive.",
     "exitPool.label.youInsert": "You insert",
-    "exitPool.action.exitPool": "Exit pool",
+    "exitPool.action.exitPool": "Remove liquidity",
     "exitPool.label.feesEarned": "Fees earned: :amount",
     "exitPool.validation.amountIn.tooHigh": "Amount can't exceed balance",
     "exitPool.validation.amountIn.negative": "Amount can't be zero or lower",
