feat(wrappedNear): Allow for registration of account

--- a/src/translation/lang/translations.eng.json
+++ b/src/translation/lang/translations.eng.json
@@ -24,9 +24,11 @@
     "home.title.latestTrends": "These are the latest trends",
 
     "wrapNearDialog.title": "Wrap NEAR",
-    "wrapNearDialog.description": "Wrapping NEAR allows you to trade on Flux",
+    "wrapNearDialog.description": "Wrapping NEAR allows you to trade on Flux. Make sure to leave 5 NEAR for gas fees to unwrap your near",
     "wrapNearDialog.errors.amountIn.exactBalance": "Please leave some balance for transaction fees",
     "wrapNearDialog.errors.amountIn.notEnoughBalance": "Not enough balance",
+    "wrapNearDialog.requiredDeposit.description": "A small deposit of :amount NEAR is required in order to swap NEAR for wNEAR due storage costs",
+    "wrapNearDialog.requiredDeposit.submit": "Deposit :amount NEAR",
 
     "marketStatus.uknown": "Unknown",
     "marketStatus.finalized": "Finalized",
