--- a/src/translation/lang/translations.eng.json
+++ b/src/translation/lang/translations.eng.json
@@ -103,6 +103,7 @@
     "marketCreation.label.outcomes": "Outcomes",
     "marketCreation.label.outcome": "Outcome :number",
     "marketCreation.label.addMoreOutcomes": "Add more outcomes",
+    "marketCreation.label.collateralToken": "Collateral token",
 
     "marketClosed.description": "This market has ended. Resolution is currently in progress, come back later to claim your earnings.",
 
