chore(translation): Uppercase Liquidity in Add Liquidity

--- a/src/translation/lang/translations.eng.json
+++ b/src/translation/lang/translations.eng.json
@@ -51,7 +51,7 @@
     "market.extraInfo": "Extra info",
     "market.resolutionDate": "Resolution date",
     "market.action.confirmSwap": "Confirm swap",
-    "market.action.confirmLiquidity": "Add liquidity",
+    "market.action.confirmLiquidity": "Add Liquidity",
     "market.action.switchTokens": "Switch tokens",
     "market.action.changeTradingPair": "Change outcome token",
     "market.action.claimEarnings": "Claim",
@@ -64,9 +64,9 @@
     "market.label.overview": "Overview",
     "market.label.redeem": "Redeem",
     "market.label.swap": "Swap",
-    "market.label.liquidity": "Add liquidity",
+    "market.label.liquidity": "Add Liquidity",
     "market.label.claimEarnings": "Claim",
-    "market.label.seedPool": "Add liquidity",
+    "market.label.seedPool": "Add Liquidity",
     "market.label.marketClosed": "Market closed",
     "market.label.exitPool": "Remove liquidity",
     "market.label.notLoggedIn": "Not logged in",
@@ -133,7 +133,7 @@
     "seedPool.not100Percent": "All the weight combined equal :percentage but should equal 100",
     "seedPool.inputZero": "Outcome can't have a weight of zero or less",
     "seedPool.input100": "Outcome can't have a weight of 100 or higher",
-    "seedPool.action.submit": "Add liquidity",
+    "seedPool.action.submit": "Add Liquidity",
     "seedPool.action.finalize": "Publish pool",
     "seedPool.action.reSeed": "Reseed pool",
     "seedPool.weightsTitle": "Outcome weights",
@@ -157,7 +157,7 @@
     "exitPool.description": "Removing pool tokens converts your position back into underlying tokens at the current rate, proportional to your share of the pool. Accrued fees are included in the amounts you receive.",
     "exitPool.label.youInsert": "You insert",
     "exitPool.action.exitPool": "Remove liquidity",
-    "exitPool.label.feesEarned": "Fees earned: :amount",
+    "exitPool.label.feesEarned": "Fees earned: :amount :tokenSymbol",
     "exitPool.validation.amountIn.tooHigh": "Amount can't exceed balance",
     "exitPool.validation.amountIn.negative": "Amount can't be zero or lower",
 
