feat(profile): Add spent and made it mobile friendly

--- a/src/translation/lang/translations.eng.json
+++ b/src/translation/lang/translations.eng.json
@@ -166,5 +166,6 @@
     "userbalances.table.market": "Market",
     "userbalances.table.outcome": "Outcome",
     "userbalances.table.balance": "Balance",
-    "userbalances.table.status": "Status"
+    "userbalances.table.status": "Status",
+    "userbalances.table.spent": "Spent"
 }
