feat(market): Add label to let the user know that all time is in UTC

--- a/src/translation/lang/translations.eng.json
+++ b/src/translation/lang/translations.eng.json
@@ -50,7 +50,7 @@
     "market.title.head": ":appName - :description",
     "market.extraInfo": "Extra info",
     "market.startDate": "Market started",
-    "market.resolutionDate": "Resolution date",
+    "market.resolutionDate": "Resolution date (in UTC)",
     "market.action.confirmSwap": "Confirm swap",
     "market.action.confirmLiquidity": "Add Liquidity",
     "market.action.switchTokens": "Switch tokens",
@@ -107,6 +107,7 @@
     "marketCreation.label.binary": "Binary",
     "marketCreation.label.categorical": "Categorical",
     "marketCreation.label.resolutionDate": "When does this market end?",
+    "marketCreation.label.helperText.resolutionDate": "Resolution date is in UTC time",
     "marketCreation.label.outcomes": "Outcomes",
     "marketCreation.label.outcome": "Outcome :number",
     "marketCreation.label.addMoreOutcomes": "Add more outcomes",
