chore(translation):  Uppercase liquidity in Remove Liquidity

--- a/src/translation/lang/translations.eng.json
+++ b/src/translation/lang/translations.eng.json
@@ -69,7 +69,7 @@
     "market.label.claimEarnings": "Claim",
     "market.label.seedPool": "Add Liquidity",
     "market.label.marketClosed": "Market closed",
-    "market.label.exitPool": "Remove liquidity",
+    "market.label.exitPool": "Remove Liquidity",
     "market.label.notLoggedIn": "Not logged in",
     "market.label.spaceTokens": " tokens",
     "market.label.lp": "LP",
@@ -162,7 +162,8 @@
 
     "exitPool.description": "Removing pool tokens converts your position back into underlying tokens at the current rate, proportional to your share of the pool. Accrued fees are included in the amounts you receive.",
     "exitPool.label.lpTokensToRemove": "LP tokens to remove",
-    "exitPool.action.exitPool": "Remove liquidity",
+    "exitPool.label.youInsert": "You insert",
+    "exitPool.action.exitPool": "Remove Liquidity",
     "exitPool.label.feesEarned": "Fees earned: :amount :tokenSymbol",
     "exitPool.validation.amountIn.tooHigh": "Amount can't exceed balance",
     "exitPool.validation.amountIn.negative": "Amount can't be zero or lower",
