--- a/src/translation/lang/translations.eng.json
+++ b/src/translation/lang/translations.eng.json
@@ -3,14 +3,14 @@
     "global.yes": "Yes",
     "global.no": "No",
     "global.none": "None",
-    "global.token": "token",
-    "global.balance": "balance",
+    "global.token": "Token",
+    "global.balance": "Balance",
     "global.comments": "Comments",
     "global.poopoken": "Liquidity Provider Token",
 
     "global.action.cancel": "Cancel",
     "global.action.submit": "Submit",
-    "global.actions.createMarket": "Create market",
+    "global.actions.createMarket": "Create Market",
 
     "pages.marketOverview": "Trade",
     "pages.resoluteOverview": "Finalized",
@@ -29,10 +29,10 @@
     "disclaimer.action.accept": "Accept",
 
     "wrapNearDialog.title": "Wrap NEAR",
-    "wrapNearDialog.description": "Wrapping NEAR allows you to trade on Flux. Make sure to leave 1 NEAR for gas fees to unwrap your near",
+    "wrapNearDialog.description": "Wrapping NEAR allows you to trade on Flux. Make sure to leave 1 NEAR for gas fees to unwrap your NEAR.",
     "wrapNearDialog.errors.amountIn.exactBalance": "Please leave some balance for transaction fees",
     "wrapNearDialog.errors.amountIn.notEnoughBalance": "Not enough balance",
-    "wrapNearDialog.requiredDeposit.description": "A small deposit of :amount NEAR is required in order to swap NEAR for wNEAR due storage costs",
+    "wrapNearDialog.requiredDeposit.description": "A small deposit of :amount NEAR is required in order to swap NEAR for wNEAR due to storage costs.",
     "wrapNearDialog.requiredDeposit.submit": "Deposit :amount NEAR",
 
     "noWrappedNear.description": "Looks like you don't have any wNEAR. You can swap your NEAR with wNEAR by going to :accountId ➔ Wrap NEAR",
@@ -42,26 +42,26 @@
     "redeem.action.submit": "Redeem",
     "redeem.overview.escrowValid": "Claimable if market is valid",
     "redeem.overview.escrowInvalid": "Claimable if market is invalid",
-    "redeem.overview.paidNow": "Paid now",
+    "redeem.overview.paidNow": "Paid Now",
 
     "marketStatus.uknown": "Unknown",
     "marketStatus.finalized": "Finalized",
     "marketStatus.invalid": "Invalid",
     "marketStatus.resoluting": "Resoluting",
-    "marketStatus.ongoing": "On going",
+    "marketStatus.ongoing": "Ongoing",
 
     "market.title.head": ":appName - :description",
-    "market.extraInfo": "Extra info",
+    "market.extraInfo": "Extra Info",
     "market.startDate": "Market started (in UTC)",
     "market.resolutionDate": "Resolution date (in UTC)",
-    "market.action.confirmSwap": "Confirm swap",
+    "market.action.confirmSwap": "Confirm Swap",
     "market.action.confirmLiquidity": "Add Liquidity",
-    "market.action.switchTokens": "Switch tokens",
-    "market.action.changeTradingPair": "Change outcome token",
+    "market.action.switchTokens": "Switch Tokens",
+    "market.action.changeTradingPair": "Change Outcome Token",
     "market.action.claimEarnings": "Claim",
 
-    "market.label.resolutionInfo": "Resolution info",
-    "market.label.totalVolume": "Total volume",
+    "market.label.resolutionInfo": "Resolution Info",
+    "market.label.totalVolume": "Total Volume",
     "market.label.opinion": "What does the market think?",
     "market.label.youPay": "You pay",
     "market.label.youReceive": "You receive",
@@ -71,29 +71,29 @@
     "market.label.liquidity": "Add Liquidity",
     "market.label.claimEarnings": "Claim",
     "market.label.seedPool": "Add Liquidity",
-    "market.label.marketClosed": "Market closed",
+    "market.label.marketClosed": "Market Closed",
     "market.label.exitPool": "Remove Liquidity",
-    "market.label.notLoggedIn": "Not logged in",
+    "market.label.notLoggedIn": "Not Logged In",
     "market.label.spaceTokens": " tokens",
     "market.label.lp": "LP",
     "market.label.relativePoolShare": "% Pool Tokens",
 
-    "market.claimEarnings.validMarket": "This market was resoluted and marked as valid. You can claim your earnings below",
+    "market.claimEarnings.validMarket": "This market was resoluted and marked as valid. You can claim your earnings below.",
     "market.claimEarnings.invalidMarket": "This market was marked as invalid, you can claim all your tokens back.",
     "market.claimEarnings.alreadyClaimed": "You've already claimed :payout :tokenName",
     "market.claimEarnings.label.outcome": "Outcome",
-    "market.claimEarnings.label.balance": "Your balance",
-    "market.claimEarnings.label.payout": "Payout per share",
+    "market.claimEarnings.label.balance": "Your Balance",
+    "market.claimEarnings.label.payout": "Payout Per Share",
     "market.claimEarnings.label.claimable": "Claimable (including earned fees through liquidity providing, shares left in LP pool and :tokenName hold in escrow):",
 
     "market.overview.rate": "Rate",
-    "market.overview.inverseRate": "Inverse rate",
-    "market.overview.estimatedFee": "Estimated fee",
-    "market.overview.maxSlippage": "Max. slippage",
-    "market.overview.maxPayout": "Max. payout",
+    "market.overview.inverseRate": "Inverse Rate",
+    "market.overview.estimatedFee": "Estimated Fee",
+    "market.overview.maxSlippage": "Max. Slippage",
+    "market.overview.maxPayout": "Max. Payout",
     "market.overview.escrowValid": "Claimable if market is valid",
     "market.overview.escrowInvalid": "Claimable if market is invalid",
-    "market.overview.paidNow": "Paid now",
+    "market.overview.paidNow": "Paid Now",
 
     "market.category.crypto": "Crypto",
     "market.category.esports": "Esports",
@@ -127,32 +127,32 @@
     "marketPeding.title.head": ":appName - Pending",
     "marketResolution.title.head": ":appName - Finalized",
 
-    "liquidityProvider.description": "Liquidity providers earn a :percentage% fee on all trades proportional to their share of the pool. Fees are added to the pool, accrue in real time and can be claimed by withdrawing your liquidity.",
+    "liquidityProvider.description": "Liquidity providers earn a :percentage% fee on all trades proportional to their share of the pool. Fees are added to the pool, accrue in real time, and can be claimed by withdrawing your liquidity.",
 
-    "orderHistory.title": "Order history",
+    "orderHistory.title": "Order History",
     "orderHistory.table.share": "Share",
-    "orderHistory.table.pricePerShare": "Price per share",
-    "orderHistory.table.orderValue": "Order value",
+    "orderHistory.table.pricePerShare": "Price Per Share",
+    "orderHistory.table.orderValue": "Order Value",
 
-    "feesEarned.title": "Fees earned",
+    "feesEarned.title": "Fees Earned",
     "feesEarned.table.market": "Market",
-    "feesEarned.table.balance": "Pool token balance",
-    "feesEarned.table.feesEarned": "Fees earned",
+    "feesEarned.table.balance": "Pool Token Balance",
+    "feesEarned.table.feesEarned": "Fees Earned",
 
-    "seedPool.wrongUser.title": "Only the creator of the market can seed the pool",
+    "seedPool.wrongUser.title": "Only the creator of the market can seed the pool.",
     "seedPool.wrongUser.description": "Please come back later. If you are the creator, please login as :account to seed the pool.",
-    "seedPool.explanation": "Seed the pool with :tokenName, pick how heavy each outcome is. Together it should be 100%",
-    "seedPool.not100Percent": "All the weight combined equal :percentage but should equal 100",
-    "seedPool.inputZero": "Outcome can't have a weight of zero or less",
-    "seedPool.input100": "Outcome can't have a weight of 100 or higher",
+    "seedPool.explanation": "Seed the pool with :tokenName, pick how heavy each outcome is. Together it should be 100%.",
+    "seedPool.not100Percent": "All the weight combined equal :percentage but should equal 100.",
+    "seedPool.inputZero": "Outcome can't have a weight of zero or less.",
+    "seedPool.input100": "Outcome can't have a weight of 100 or higher.",
     "seedPool.action.submit": "Add Liquidity",
-    "seedPool.action.finalize": "Publish pool",
-    "seedPool.action.reSeed": "Reseed pool",
-    "seedPool.weightsTitle": "Outcome weights",
-    "seedPool.label.mainTokenBalance": "NEAR input",
-    "seedPool.errors.notEnoughBalance": "Not enough balance",
+    "seedPool.action.finalize": "Publish Pool",
+    "seedPool.action.reSeed": "Reseed Pool",
+    "seedPool.weightsTitle": "Outcome Weights",
+    "seedPool.label.mainTokenBalance": "NEAR Input",
+    "seedPool.errors.notEnoughBalance": "Not Enough Balance",
 
-    "liquidityProvider.errors.notEnoughBalance": "Not enough balance",
+    "liquidityProvider.errors.notEnoughBalance": "Not Enough Balance",
 
     "priceHistory.labels.1d": "1D",
     "priceHistory.labels.1w": "1W",
@@ -160,18 +160,18 @@
     "priceHistory.labels.1m": "1M",
     "priceHistory.labels.all": "ALL",
 
-    "swap.errors.notEnoughBalance": "Not enough balance",
+    "swap.errors.notEnoughBalance": "Not Enough Balance",
 
     "auth.login": "Login",
 
     "navigation.back": "Back",
 
     "exitPool.description": "Removing pool tokens converts your position back into underlying tokens at the current rate, proportional to your share of the pool. Accrued fees are included in the amounts you receive.",
-    "exitPool.label.lpTokensToRemove": "LP tokens to remove",
-    "exitPool.label.youInsert": "You insert",
+    "exitPool.label.lpTokensToRemove": "LP Tokens To Remove",
+    "exitPool.label.youInsert": "You Insert",
     "exitPool.action.exitPool": "Remove Liquidity",
-    "exitPool.label.feesEarned": "Fees earned: :amount :tokenSymbol",
-    "exitPool.validation.amountIn.tooHigh": "Amount can't exceed balance",
+    "exitPool.label.feesEarned": "Fees Earned: :amount :tokenSymbol",
+    "exitPool.validation.amountIn.tooHigh": "Amount an't exceed balance",
     "exitPool.validation.amountIn.negative": "Amount can't be zero or lower",
 
     "userbalances.title": "Balances",
